snapshots/syntax/library/functions/financial/ppmt/ppmt_with_statement.snap
---
source: vb6parse/src/syntax/library/functions/financial/ppmt.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: WithStatement
      children:
        - kind: WithKeyword
          text: With
        - kind: Whitespace
          text: " "
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: amortization
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: Whitespace
              text: "    "
            - kind: AssignmentStatement
              children:
                - kind: IdentifierExpression
                  children:
                    - kind: PeriodOperator
                      text: "."
                    - kind: Identifier
                      text: PrincipalPmt
                - kind: Whitespace
                  text: " "
                - kind: EqualityOperator
                  text: "="
                - kind: Whitespace
                  text: " "
                - kind: CallExpression
                  children:
                    - kind: Identifier
                      text: PPmt
                    - kind: LeftParenthesis
                      text: (
                    - kind: ArgumentList
                      children:
                        - kind: Argument
                          children:
                            - kind: IdentifierExpression
                              children:
                                - kind: PeriodOperator
                                  text: "."
                                - kind: Identifier
                                  text: Rate
                        - kind: Comma
                          text: ","
                        - kind: Whitespace
                          text: " "
                        - kind: Argument
                          children:
                            - kind: IdentifierExpression
                              children:
                                - kind: PeriodOperator
                                  text: "."
                                - kind: Identifier
                                  text: Period
                        - kind: Comma
                          text: ","
                        - kind: Whitespace
                          text: " "
                        - kind: Argument
                          children:
                            - kind: IdentifierExpression
                              children:
                                - kind: PeriodOperator
                                  text: "."
                                - kind: Identifier
                                  text: NumPayments
                        - kind: Comma
                          text: ","
                        - kind: Whitespace
                          text: " "
                        - kind: Argument
                          children:
                            - kind: IdentifierExpression
                              children:
                                - kind: PeriodOperator
                                  text: "."
                                - kind: Identifier
                                  text: LoanAmount
                    - kind: RightParenthesis
                      text: )
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: WithKeyword
          text: With
        - kind: Newline
          text: "\n"
